Port pattern mode to 64-bit Linux - change calls in replaced realloc to indirect jumps via stub in x64 - adjust raw syscall calling code in 64-bit Linux - replace int 0x80 with syscall - set pattern mode as the default -light mode in 64-bit - replace SEG_FS with seg_tls for 64-bit TLS segment support
SVN-Revision: 879

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -563,6 +563,6 @@ add_subdirectory(app_suite)
 
 else (NOT X64)
   # pattern mode testing.
-  newtest_ex(free.pattern free.c "" "-pattern;0xf1fd;-no_count_leaks" "" OFF "addronly")
-  newtest(malloc.pattern malloc.c "" "-pattern;0xf1fd;-no_count_leaks" "" OFF "")
+  newtest_ex(free.pattern free.c "" "-light" "" OFF "addronly")
+  newtest_ex(malloc.pattern malloc.c "" "-light" "" OFF "")
 endif (NOT X64)
